--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Vistas</string>
+    <string name="qu_sentido_es_este">¿Qué sentido es este?</string>
+    <string name="enviar">Enviar</string>
+    <string name="otro">Otro</string>
 </resources>
