deteccion de minusculas y mayusculas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vistas</string>
+    <string name="app_name">Los sentidos</string>
     <string name="qu_sentido_es_este">¿Qué sentido es este?</string>
     <string name="enviar">Enviar</string>
     <string name="otro">Otro</string>
